--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@
     font-size: 18px;
     list-style-type: none;
 }
-.nav-bar a:hover {
+.nav-bar li:hover {
     background-color:skyblue;
     color: black;
 }
@@ -13,6 +13,8 @@ ul.nav-bar {
     padding: 22px 40px;
     overflow: hidden;
     background-color: #ffffff;
+    z-index: 10;
+    position: relative;
 }
   ul.nav-bar li {
     float: left;
@@ -36,7 +38,70 @@ ul.nav-bar {
     background-size: 50px 50px;
     padding: 10px 10px 10px 58px;
 }
-.nav-bar a:hover {
-    background-color:skyblue;
-    color: black;
+/*Nav bar squeezes into vertical when compressed below 600px width*/
+@media screen and (max-width: 600px) {
+    ul.nav-bar li.right, 
+    ul.nav-bar li,
+    ul.nav-bar a {float: none;}
+}
+/*Text that comes along with falling shader box*/
+.grid .prelude {
+  font-size: 24px;
+  font-size: 1rem;
+  color: rgba(255, 255, 255, 0.7);
+  display: block;
+  font-weight: normal;
+  font-style: italic;
+  font-weight: bold;
+  left: 45%;
+  top: 48%;
+}
+.prelude, .desc, .copyright {
+  color: white;
+  font-size: 56px;
+  font-size: 3.5rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  font-weight: bold;
+  text-align: center;
+  text-shadow: 0 3px 3px rgba(0, 0, 0, 0.25);
+  position: absolute;
+  top: 50%;
+  left: 29.5%;
+  animation: fade-in 7s;
+}
+/*Shader box dropdown*/
+.grid {
+  display: grid;
+  text-align: center;
+  padding: 0;
+  margin: 0;
+  position: relative;
+  animation: move 1.5s forwards;
+}
+.dropdown{
+  max-width: 100%;
+  max-height: 100vh;
+  margin: auto;
+}
+/*For the animations*/
+@keyframes move {
+  from {
+    top: -910px;
+  }
+  to {
+    top: 0px;;
+  }
+}
+@keyframes fade-in {
+  0% { opacity: 0; }
+  100% { opacity: 1; }
+}
+/*Copyright add on*/
+.copyright {
+  font-size: 14px;
+  left: 84%;
+  top: 98%;
 }
