--- a/style.css
+++ b/style.css
@@ -64,40 +64,65 @@ ul.nav-bar {
     }
 }
 /*Sample page category bars*/
-img.category1, img.category2, img.category3 {
-  width: 100%;
-  display: inline-block;
-  float: left;
-  max-width: 31.2%;
-}
-.category1{
-  padding-right: 1.5625%;
-}
-.category2{
-  padding: 0px 1.5625% 0px;
-}
-.category3{
-  padding-left: 1.5625%;
-}
 .selection {
+  background-color: rgba(255, 255, 255, 0.7);
+  animation: fade-in 3s;
   padding: 1.5625% 3.125% 1.5625%;
   margin: 3.125% 1.5625% 3.125%;
-  z-index: 1;
+  overflow-x: auto;
+  white-space: nowrap;
 }
-/**/
-.buttons {
-
+.section1, .section2, .section3, .section4, .section5, .section6{
+  display: inline-block;
+  height: 65vh;
+  margin-right: 20px;
+  vertical-align: top;
+}
+.section1 {
+  width: 136vw;
+}
+.section2 {
+  width: 102vw;
+}
+.section3 {
+  width: 176vw;
+}
+.section4 {
+  width: 70vw;
+}
+.section5 {
+  width: 396vw;
+}
+.section6 {
+  width: 220vw;
+}
+.image {
+  padding: 0 1.5625% 0;
+  max-height: 56vh;
+}
+.button {
+  background-color:gray;
+  border:rgb(0, 0, 0);
+  color:black;
+  padding: 20px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  margin: 4px 2px;
+  cursor: pointer;
+  border-radius: 8px;
+}
+.button button:hover {
+  background-color:skyblue;
 }
 /*About me content*/
-.box, .selection {
+.box {
   display: inline-block;
   background-color: rgba(255, 255, 255, 0.7);
   animation: fade-in 3s;
-}
-.box {
   padding: 30px;
   margin: 60px;
-  flex-wrap: wrap;
 }
 .pfp {
   float: right;
@@ -169,9 +194,48 @@ img.category1, img.category2, img.category3 {
   0% { opacity: 0; }
   100% { opacity: 1; }
 }
+@-webkit-keyframes fade-in {
+  from {opacity: 0;}
+  to {opacity: 1;}
+}
 /*Copyright add on*/
 .copyright {
   font-size: 14px;
   top: 97%;
   left: 5%;
+}
+/* Popup form container */
+.form {
+  position: relative;
+  display: inline-block;
+  cursor: pointer;
+}
+.form .formtext {
+  visibility: hidden;
+  width: 160px;
+  background-color: #555;
+  color: #fff;
+  text-align: center;
+  border-radius: 6px;
+  padding: 8px 0;
+  position: absolute;
+  z-index: 1;
+  bottom: 125%;
+  left: 50%;
+  margin-left: -80px;
+}
+.form .formtext::after {
+  content: "";
+  position: absolute;
+  top: 100%;
+  left: 50%;
+  margin-left: -5px;
+  border-width: 5px;
+  border-style: solid;
+  border-color: #555 transparent transparent transparent;
+}
+.form .show {
+  visibility: visible;
+  -webkit-animation: fade-in 1s;
+  animation: fade-in 1s
 }
